# aiotfm

./: .coveragerc  .gitignore  LICENSE.txt  Notifier.py  Procfile  README.md  advance_bot.py  bot.config  example_bot.py  pyproject.toml  requirements.txt  runBot.py  setup.cfg  setup.py
.github/workflows/: lint.yml  pythonpublish.yml
aiotfm/: __init__.py  __version__.py  client.py  connection.py  enums.py  errors.py  friend.py  get_keys.py  inventory.py  locale.py  message.py  packet.py  player.py  room.py  shop.py  tribe.py
aiotfm/utils/: __init__.py  date.py  enum.py  get_keys.py  locale.py  msg801.py  shakikoo.py
docs/: Client.md  Connection.md  Enums.md  Errors.md  Events.md  Friend.md  Inventory.md  Message.md  Migrating to v1.0.md  Packet.md  Player.md  README.md  Room.md  Shop.md  Tribe.md  docgen.py
tests/: test_client.py  test_locale.py  test_packet.py  test_utils.py
